--- a/task1.html
+++ b/task1.html
@@ -84,8 +84,13 @@
 				taskList.push(new Array(type, "선진폭격", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진폭격", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
 				taskList.push(new Array(type, "선진폭격", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "배반    ", "Lv. 3", "1000만 식량", 10, 11));
-				taskList.push(new Array(type, "유인    ", "Lv. 3", "1000만 식량", 10, 11));
+				taskList.push(new Array(type, "사보타주", "Lv. 3", " 900만 식량",  9, 22));
+				taskList.push(new Array(type, "보호    ", "Lv. 3", " 650만 식량",  9, 22));
+				taskList.push(new Array(type, "일제사격", "Lv. 3", " 730만 식량",  9, 22));
+				taskList.push(new Array(type, "응급처치", "Lv. 3", " 820만 식량",  9, 22));
+				taskList.push(new Array(type, "파괴    ", "Lv. 3", "1000만 식량",  9, 22));
+				taskList.push(new Array(type, "배반    ", "Lv. 3", "1000만 식량",  9, 22));
+				taskList.push(new Array(type, "유인    ", "Lv. 3", "1000만 식량",  9, 22));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
