--- a/task1.html
+++ b/task1.html
@@ -28,6 +28,15 @@
 				taskMap.startDate = "2020-03-10 23:09:00";
 				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 2", " 550만 골드",  7,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 3", " 700만 골드",  8,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 4", " 860만 골드", 10,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 5", "1060만 골드", 10, 12));
+				taskList.push(new Array(type, "방공타워", "Lv. 6", "1220만 골드", 11,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
