--- a/task1.html
+++ b/task1.html
@@ -12,10 +12,14 @@
 				taskMap.title = "1-1. 국민 (6명)";
 				taskMap.startDate = "2020-03-10 02:55:00";
 				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "저격타워", "Lv. 1", " 300만 골드",  3,  0));
-				taskList.push(new Array(type, "무기고  ", "Lv.13", "1600만 식량", 12, 12)); // 디지털
+				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
+				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -26,7 +30,6 @@
 				var type = "국민2";
 				taskMap.title = "1-2. 국민 (6명)";
 				taskMap.startDate = "2020-03-10 23:09:00";
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 2", " 550만 골드",  7,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 3", " 700만 골드",  8,  0));
@@ -40,16 +43,21 @@
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
-
+			
 			function setTask13() {
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민3";
-				taskMap.title = "1-3. 국민 (3명)";
-				taskMap.startDate = "2020-03-10 03:17:00";
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskMap.title = "1-3. 국민 (6명)";
+				taskMap.startDate = "2020-03-28 23:09:00";
+				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
+				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
+				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -59,10 +67,11 @@
 				var taskMap = new Object();
 				var type = "국민4";
 				taskMap.title = "1-4. 국민 (3명)";
-				taskMap.startDate = "2020-03-15 13:11:00";
+				taskMap.startDate = "2020-03-10 03:17:00";
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "저격타워", "Lv. 1", " 300만 골드",  3,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -71,7 +80,23 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민5";
-				taskMap.title = "1-5. 국민 (1명)";
+				taskMap.title = "1-5. 국민 (3명)";
+				taskMap.startDate = "2020-03-15 13:11:00";
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskMap.taskList = taskList;
+				allTaskMapList.push(taskMap);
+			}
+
+			function setTask16() {
+				var taskList = new Array();
+				var taskMap = new Object();
+				var type = "국민6";
+				taskMap.title = "1-6. 국민 (1명)";
 				taskMap.startDate = "2020-03-13 12:00:00";
 				taskList.push(new Array(type, "무장함정", "Lv. 2", " 8.2만 석유", 14, 12));
 				taskList.push(new Array(type, "유인함정", "Lv. 2", " 365만 골드",  9,  0));
@@ -131,6 +156,7 @@
 					setTask13();
 					setTask14();
 					setTask15();
+					setTask16();
 					setTask21();
 					setTask22();
 					setDominations();
