--- a/task1.html
+++ b/task1.html
@@ -9,7 +9,7 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민1";
-				taskMap.title = "1-1. 국민 (6명)";
+				taskMap.title = "1-1. 국민 (6명 → 4명)";
 				taskMap.startDate = "2020-03-10 02:55:00";
 				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
@@ -18,8 +18,8 @@
 				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
 				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -28,7 +28,7 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민2";
-				taskMap.title = "1-2. 국민 (6명)";
+				taskMap.title = "1-2. 국민 (3명 → 4명)";
 				taskMap.startDate = "2020-03-10 23:09:00";
 				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 2", " 550만 골드",  7,  0));
@@ -39,7 +39,7 @@
 				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -48,16 +48,17 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민3";
-				taskMap.title = "1-3. 국민 (6명)";
-				taskMap.startDate = "2020-03-28 23:09:00";
+				taskMap.title = "1-3. 국민 (3명 → 4명)";
+				taskMap.startDate = "2020-03-10 23:09:00";
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
 				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
 				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 15,  0)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
+				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -66,12 +67,14 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민4";
-				taskMap.title = "1-4. 국민 (3명)";
-				taskMap.startDate = "2020-03-10 03:17:00";
+				taskMap.title = "1-4. 국민 (3명 → 6명)";
+				taskMap.startDate = "2020-03-15 13:11:00";
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "저격타워", "Lv. 1", " 300만 골드",  3,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
@@ -80,14 +83,12 @@
 				var taskList = new Array();
 				var taskMap = new Object();
 				var type = "국민5";
-				taskMap.title = "1-5. 국민 (3명)";
-				taskMap.startDate = "2020-03-15 13:11:00";
+				taskMap.title = "1-5. 국민 (3명 → 0명)";
+				taskMap.startDate = "2020-03-10 03:17:00";
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
 				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
+				taskList.push(new Array(type, "저격타워", "Lv. 1", " 300만 골드",  3,  0));
 				taskMap.taskList = taskList;
 				allTaskMapList.push(taskMap);
 			}
