--- a/task1.html
+++ b/task1.html
@@ -2,172 +2,10 @@
 <html>
 	<head>
 		<title>도미네이션즈 일정 1</title>
-		<script type="text/javascript" src="jquery-1.7.min.js"></script>
-		<script type="text/javascript" src="dominations.js"></script>
-		<script>
-			function setTask11() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "국민1";
-				taskMap.title = "1-1. 국민 (6명 → 4명)";
-				taskMap.startDate = "2020-03-10 02:55:00";
-				taskList.push(new Array(type, "전차격납", "Lv.13", "1380만 골드", 16,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			function setTask12() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "국민2";
-				taskMap.title = "1-2. 국민 (3명 → 4명)";
-				taskMap.startDate = "2020-03-10 23:09:00";
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 2", " 550만 골드",  7,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 3", " 700만 골드",  8,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 4", " 860만 골드", 10,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 5", "1060만 골드", 10, 12));
-				taskList.push(new Array(type, "방공타워", "Lv. 6", "1220만 골드", 11,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
-				taskList.push(new Array(type, "저격타워", "Lv. 1", " 300만 골드",  3,  0));
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-			
-			function setTask13() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "국민3";
-				taskMap.title = "1-3. 국민 (3명 → 4명)";
-				taskMap.startDate = "2020-03-10 23:09:00";
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 7", "1400만 골드", 12,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 8", "1500만 골드", 13,  0));
-				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv. 9", "1700만 골드", 14, 12));
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
-				taskList.push(new Array(type, "방공타워", "Lv.10", "1800만 골드", 16, 12)); // 미확인
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			function setTask14() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "국민4";
-				taskMap.title = "1-4. 국민 (3명 → 6명)";
-				taskMap.startDate = "2020-03-15 13:11:00";
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskList.push(new Array(type, "전차격납", "Lv.14", "1600만 골드", 18,  0));
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			function setTask15() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "국민5";
-				taskMap.title = "1-5. 국민 (3명 → 0명)";
-				taskMap.startDate = "2020-03-10 03:17:00";
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskList.push(new Array(type, "유정    ", "Lv.11", "1600만 골드", 14, 12)); // 디지털
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			function setTask16() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "국민6";
-				taskMap.title = "1-6. 국민 (1명)";
-				taskMap.startDate = "2020-03-13 12:00:00";
-				taskList.push(new Array(type, "무장함정", "Lv. 2", " 8.2만 석유", 14, 12));
-				taskList.push(new Array(type, "유인함정", "Lv. 2", " 365만 골드",  9,  0));
-				taskList.push(new Array(type, "유인함정", "Lv. 3", " 450만 골드", 10,  0));
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			function setTask21() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "무기1";
-				taskMap.title = "2-1. 무기고 연구";
-				taskMap.startDate = "2020-03-18 00:11:00";
-				taskList.push(new Array(type, "정찰기  ", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 2", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 3", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 4", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 5", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "선진폭격", "Lv. 6", "  18만 석유",  8, 14)); // 디지털
-				taskList.push(new Array(type, "사보타주", "Lv. 3", " 900만 식량",  9, 22));
-				taskList.push(new Array(type, "보호    ", "Lv. 3", " 650만 식량",  9, 22));
-				taskList.push(new Array(type, "일제사격", "Lv. 3", " 730만 식량",  9, 22));
-				taskList.push(new Array(type, "응급처치", "Lv. 3", " 820만 식량",  9, 22));
-				taskList.push(new Array(type, "파괴    ", "Lv. 3", "1000만 식량",  9, 22));
-				taskList.push(new Array(type, "배반    ", "Lv. 3", "1000만 식량",  9, 22));
-				taskList.push(new Array(type, "유인    ", "Lv. 3", "1000만 식량",  9, 22));
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			function setTask22() {
-				var taskList = new Array();
-				var taskMap = new Object();
-				var type = "무기2";
-				taskMap.title = "2-2. 무기고 연구";
-				taskMap.startDate = "2020-03-04 13:49:00";
-				taskList.push(new Array(type, "무장차량", "Lv. 8", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "엠알엘  ", "Lv. 4", "21.5만 석유", 14,  6)); // 우주				
-				taskList.push(new Array(type, "에이피씨", "Lv. 7", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "전술헬기", "Lv. 6", "  25만 석유", 16,  4)); // 디지털
-				taskList.push(new Array(type, "엠알엘  ", "Lv. 5", "  24만 석유", 14,  6)); // 디지털 (예상)
-				taskList.push(new Array(type, "우주포병", "Lv. 1", "1500만 식량", 13,  8)); // 우주
-				taskList.push(new Array(type, "우주야전", "Lv. 1", "1500만 식량", 13,  8)); // 우주
-				taskList.push(new Array(type, "우주마차", "Lv. 1", "1500만 식량", 13,  8)); // 우주
-				taskList.push(new Array(type, "우주헬기", "Lv. 1", "1500만 식량", 13,  8)); // 우주
-				taskList.push(new Array(type, "우주강습", "Lv. 1", "1500만 식량", 13,  8)); // 우주
-				taskMap.taskList = taskList;
-				allTaskMapList.push(taskMap);
-			}
-
-			$(document).ready(function() {
-				try {
-					setTask11();
-					setTask12();
-					setTask13();
-					setTask14();
-					setTask15();
-					setTask16();
-					setTask21();
-					setTask22();
-					setDominations();
-				} catch (e){
-					alert(e);
-				}
-				
-			});
-		</script>
-
-		<link type="text/css" rel="stylesheet" href="style.css">
+		<script type="text/javascript" src="js/jquery-1.7.min.js"></script>
+		<script type="text/javascript" src="js/dominations.js"></script>
+		<script type="text/javascript" src="js/dominations1.js"></script>
+		<link type="text/css" rel="stylesheet" href="css/dominations.css">
 	</head>
 
 	<body>
